trunk/Archive2/a0/698e5c9b16db9a/main.cpp
class Foo
{
public:
    Foo(const Foo&) = delete;
    Foo& operator=(const Foo&) = delete;
};


int main()
{
    Foo foo;
}
